--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ env_default = nodemcuv2
 platform = espressif8266
 framework = arduino
 board = nodemcuv2
-
+build_flags = -D PIO_FRAMEWORK_ARDUINO_LWIP_HIGHER_BANDWIDTH
 ; Serial Monitor options
 monitor_speed = 115200
 monitor_port = COM12
